--- a/css/less/common.less
+++ b/css/less/common.less
@@ -198,6 +198,7 @@
 .no-pbottom {
     padding-bottom: 0 !important;
 }
+
 .no-padding {
     padding-top: 0 !important;
     padding-bottom: 0 !important;
@@ -217,6 +218,14 @@
                 }
             }
         }
+    }
+}
+@media (max-width: 639px) {
+    .no-ptop-m {
+        padding-top: 0 !important;
+    }
+    .no-pbottom-m {
+        padding-bottom: 0 !important;
     }
 }
 @media (min-width: 1024px) {
