--- a/css/less/content.less
+++ b/css/less/content.less
@@ -16,7 +16,7 @@
         }
     }
     .box-inner-wrap {
-        margin-bottom: 6.4rem;
+        margin-bottom: var(--second-padding);
         margin-left: auto;
         margin-right: auto;
         max-width: 1040px;
@@ -26,6 +26,9 @@
         overflow: hidden;
         background-color: #fff;
         padding: 4.4rem 4rem 3rem 4rem;
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
     .info-inner-wrap {
         margin: 4rem 0 0 0;
@@ -44,10 +47,8 @@
     .title-inner-wrap {
         margin-bottom: 5.2rem;
         text-align: left;
-        font-size: 14px;
-        line-height: 1.4;
         font-weight: 500;
-        color: #000;
+        color: #575759;
         &.text-large {
             font-size: 2rem;
             line-height: 1.1;
@@ -57,14 +58,14 @@
             }
         }
         .h6-title {
-            margin: 0 0 8px 0;
+            margin: 0 0 12px 0;
             &.title-gradient {
                 display: inline-block;
                 background-image: linear-gradient(89.86deg, #0039AD 0.12%, #3678FF 82.24%);
             }
         }
         .h4-title {
-            margin: 0 0 10px 0;
+            margin: 0 0 2.4rem 0;
         }
     }
 }
@@ -74,7 +75,7 @@
     }
 }
 .main-text-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     color: #575759;
     .box-inner-wrap {
         max-width: 1040px;
@@ -85,7 +86,7 @@
     }
 }
 .main-tiles-pitch-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .items-inner-wrap {
     }
     .items-wrap {
@@ -112,7 +113,7 @@
     }
 }
 .main-lead-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .box-inner-wrap {
         border-radius: 3.2rem;
         background-color: #fff;
@@ -120,7 +121,7 @@
         position: relative;
         max-width: 1040px;
         margin: 0 auto;
-        padding: 6.4rem 8rem;
+        padding: var(--second-padding) 8rem;
         color: #575759;
     }
     .title-inner-wrap {
@@ -255,9 +256,9 @@
     }
 }
 .main-tiles-percent-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .main-title-wrap {
-        margin-bottom: 6.4rem;
+        margin-bottom: var(--second-padding);
         margin-left: auto;
         margin-right: auto;
         max-width: 1040px;
@@ -291,7 +292,7 @@
     }
 }
 .main-tiles-text-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .items-inner-wrap {
         margin: 0 auto;
         max-width: 1040px;
@@ -316,7 +317,7 @@
     }
 }
 .main-pitch-tiles-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .main-title-wrap {
         margin: 0 auto 4.8rem auto;
         max-width: 80.8rem;
@@ -340,9 +341,9 @@
 }
 .main-iban-tiles-second-box,
 .main-iban-tiles-third-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .main-title-wrap {
-        margin-bottom: 6.4rem;
+        margin-bottom: var(--second-padding);
         .title-gradient {
             background-image: linear-gradient(90deg, #33B78F 0%, #019E6F 100%);
         }
@@ -376,15 +377,15 @@
     }
 }
 .main-iban-tiles-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .main-title-wrap {
-        margin-bottom: 6.4rem;
+        margin-bottom: var(--second-padding);
         .title-gradient {
             background-image: linear-gradient(90deg, #0029FF 0%, #ED7DCE 100%);
         }
     }
     .main-buttons-wrap {
-        padding-top: 6.4rem;
+        padding-top: var(--second-padding);
         padding-bottom: 0;
         margin: 0;
     }
@@ -398,15 +399,15 @@
     }
 }
 .main-partnerships-tiles-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .main-title-wrap {
-        margin-bottom: 6.4rem;
+        margin-bottom: var(--second-padding);
         &+.items-third, &+.items-four {
             margin-top: -1.6rem;
         }
     }
     .items-inner-wrap {
-        margin-bottom: 12.8rem;
+        margin-bottom: var(--main-padding);
         margin-left: auto;
         margin-right: auto;
         max-width: 1140px;
@@ -454,7 +455,7 @@
     .photo-inner-wrap {
     }
     .title-inner-wrap {
-        margin-bottom: 6.4rem;
+        margin-bottom: var(--second-padding);
         margin-left: auto;
         margin-right: auto;
         max-width: 85rem;
@@ -544,7 +545,7 @@
     }
 }
 .main-info-tiles-box {
-    padding: 12.8rem 0 12.8rem 0;
+    padding: var(--main-padding) 0 var(--main-padding) 0;
     &.section-second {
         padding-bottom: 10.8rem;
     }
@@ -592,11 +593,11 @@
         border-radius: 3.2rem;
         display: block;
         position: relative;
-        padding: 6.4rem 8rem;
+        padding: var(--second-padding) 8rem;
         margin-left: auto;
         margin-right: auto;
         max-width: 1040px;
-        margin-bottom: 12.8rem;
+        margin-bottom: var(--main-padding);
         &:last-child {
             margin-bottom: 0;
         }
@@ -652,7 +653,7 @@
     }
 }
 .tile-top-box {
-    padding: 16.2rem 0 12.8rem 0;
+    padding: 16.2rem 0 var(--main-padding) 0;
     color: #fff;
     font-weight: 500;
     position: relative;
@@ -726,7 +727,7 @@
     }
 }
 .main-integrators-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .main-title-wrap {
         margin-bottom: 4.8rem;
     }
@@ -744,7 +745,7 @@
     }
 }
 .main-roadmap-second-tiles-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .main-title-wrap {
         margin-bottom: 4.8rem;
         text-align: left;
@@ -775,7 +776,7 @@
     }
 }
 .main-roadmap-tiles-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .main-title-wrap {
         margin-bottom: 4.8rem;
         text-align: left;
@@ -793,7 +794,7 @@
     }
 }
 .main-services-full-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     &.section-pitch {
         .main-title-wrap, .items-inner-wrap {
             max-width: 1140px;
@@ -810,7 +811,7 @@
             max-width: 94.3rem;
             margin-left: auto;
             margin-right: auto;
-            margin-bottom: 6.4rem;
+            margin-bottom: var(--second-padding);
             .h1-title {
                 margin: 0 0 24px 0;
                 color: var(--clr-title);
@@ -837,11 +838,11 @@
             }
         }
         p {
-            max-width: (800/24em);
+            max-width: (960/24em);
         }
     }
     .main-buttons-wrap {
-        padding-top: 6.4rem;
+        padding-top: var(--second-padding);
         margin-bottom: -10px;
     }
     .items-wrap {
@@ -856,7 +857,7 @@
 .main-products-scheme-box {
     position: relative;
     z-index: 2;
-    padding: 12.8rem 0 11.2rem 0;
+    padding: var(--main-padding) 0 11.2rem 0;
     &:before {
         content: "";
         display: block;
@@ -933,7 +934,7 @@
         }
     }
     .items-inner-wrap {
-        margin-bottom: 6.4rem;
+        margin-bottom: var(--second-padding);
         .items-wrap {
             margin: 0 -1.6rem  -3.2rem  -1.6rem;
         }
@@ -949,7 +950,7 @@
     }
 }
 .main-services-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .items-wrap {
         margin: 0 -1.6rem  -3.2rem  -1.6rem;
     }
@@ -982,7 +983,7 @@
 }
 .main-products-info-box {
     position: relative;
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     &.section-pitch {
         &:before {
             display: none;
@@ -1082,7 +1083,7 @@
         background-color: #1D1D1F;
         margin: 0 auto;
         max-width: 1040px;
-        padding: 6.4rem 8rem;
+        padding: var(--second-padding) 8rem;
     }
     .items-wrap {
         margin: 0 -12px -4.8rem -12px;
@@ -1107,7 +1108,7 @@
     .main-title-wrap {
         text-align: center;
         color: #fff;
-        margin-bottom: 6.4rem;
+        margin-bottom: var(--second-padding);
         .h4-title {
             max-width: (754/48em);
             color: inherit;
@@ -1145,7 +1146,7 @@
 }
 .main-bg-box {
     background-color: #151516;
-    padding: 12.8rem 0 12.8rem;
+    padding: var(--main-padding) 0 var(--main-padding);
     &.bg-gray {
         background-color: #F0F2F6;
         .main-roadmap-tiles-box {
@@ -1172,7 +1173,7 @@
     }
     .inner-head-box {
         color: #fff;
-        padding: 12.8rem 0;
+        padding: var(--main-padding) 0;
         .main-title-wrap {
             color: inherit;
             max-width: inherit;
@@ -1200,7 +1201,7 @@
         }
     }
     .tiles-about-box {
-        padding: 12.8rem 0;
+        padding: var(--main-padding) 0;
         .main-title-wrap {
             text-align: center;
             color: #fff;
@@ -1219,7 +1220,7 @@
         }
     }
     .main-about-tiles-box {
-        padding: 12.8rem 0 12.8rem;
+        padding: var(--main-padding) 0 var(--main-padding);
         .items-inner-wrap {
             max-width: 1152px;
         }
@@ -1232,9 +1233,9 @@
     }
 }
 .main-questions-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .main-title-wrap {
-        margin-bottom: 6.4rem;
+        margin-bottom: var(--second-padding);
         color: #000;
         .h4-title {
             margin-bottom: 24px;
@@ -1248,19 +1249,22 @@
     }
     .item-wrap {
         border-bottom: 1px solid #DDDFE3;
+        &:last-child {
+            border-bottom: none;
+        }
     }
 }
 .main-overview-title-box {
-    padding: 7.5rem 0 18rem 0;
+    padding: 19.2rem 0 19.2rem 0;
     .h2-title {
         letter-spacing: -0.02em;
-        color: #1D1D1F;;
-        margin: 0;
+        color: #1D1D1F;
+        margin: 0 auto;
         max-width: (1045/64em);
     }
 }
 .main-video-box {
-    padding: 11.7rem 0 12.8rem 0;
+    padding: 11.7rem 0 var(--main-padding) 0;
     .info-inner-wrap {
         margin-bottom: 24px;
         text-align: center;
@@ -1270,7 +1274,7 @@
     }
 }
 .main-news-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     background-color: #F0F2F6;
     .items-wrap {
         margin: 0 -1.6rem  -3.2rem  -1.6rem;
@@ -1281,7 +1285,7 @@
         width: 33.33%;
     }
     .more-wrap {
-        margin-top: 6.4rem;
+        margin-top: var(--second-padding);
         text-align: center;
         .btn {
             border-width: 1px;
@@ -1294,7 +1298,7 @@
     }
 }
 .main-overview-tiles-box {
-    padding: 12.8rem 0 6.6rem 0;
+    padding: var(--main-padding) 0 6.6rem 0;
     .items-wrap {
         margin: 0 -1.6rem -3.2rem -1.6rem;
     }
@@ -1318,8 +1322,8 @@
     }
 }
 .main-tiles-overview-second-box {
-    padding-top: 12.8rem;
-    padding-bottom: 12.8rem;
+    padding-top: var(--main-padding);
+    padding-bottom: var(--main-padding);
     .items-wrap {
         margin: 0 -8px -16px -8px;
     }
@@ -1340,7 +1344,7 @@
 }
 .main-about-tiles-box {
     background-color: #151516;
-    padding: 12.8rem 0 12.8rem 0;
+    padding: var(--main-padding) 0 var(--main-padding) 0;
     position: relative;
     overflow: hidden;
     .items-inner-wrap {
@@ -1348,7 +1352,7 @@
         margin: 0 auto;
     }
     .main-title-wrap {
-        margin-bottom: 12.8rem;
+        margin-bottom: var(--main-padding);
         position: relative;
         z-index: 3;
         .title-gradient {
@@ -1361,7 +1365,7 @@
         z-index: 2;
         margin: 0 auto;
         max-width: 980px;
-        margin-bottom: 12.8rem;
+        margin-bottom: var(--main-padding);
         .photo-inner-wrap {
             width: 38.5rem;
             flex-shrink: 0;
@@ -1416,7 +1420,7 @@
             max-width: 94rem;
             padding-top: 6.5rem;
             .title-gradient {
-                background-image: linear-gradient(90.67deg, #2EA2B7 5.05%, #708DF5 51.76%, #F65AA8 80.63%, #EC3F49 105.83%);
+                background-image: linear-gradient(990deg, #2EA2B7 0%, #6690EC 100%);
             }
         }
     }
@@ -1434,7 +1438,7 @@
 .main-about-head-box {
     &.type-second {
         color: #575759;
-        padding: 12.8rem 0;
+        padding: var(--main-padding) 0;
         .inner-wrap {
             min-height: 0;
         }
@@ -1491,14 +1495,14 @@
     }
 }
 .main-payment-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .photo-inner-wrap {
         flex-shrink: 0;
         width: 37.2rem;
     }
     .title-inner-wrap {
         flex: 1;
-        padding: 0 6.4rem 0 2rem;
+        padding: 0 var(--second-padding) 0 2rem;
         max-width: calc(100% - 37.2rem);
     }
     .main-title-wrap {
@@ -1552,7 +1556,7 @@
     }
 }
 .main-icons-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     background-color: #F0F2F6;
     .main-title-wrap {
         color: #303031;
@@ -1574,7 +1578,7 @@
     }
 }
 .main-card-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     background-color: #F0F2F6;
     .box-outer-wrap {
         background: #FFFFFF;
@@ -1594,7 +1598,7 @@
     }
     .info-inner-wrap {
         width: calc(100% - 35.5rem);
-        padding: 0 0 0 6.4rem;
+        padding: 0 0 0 var(--second-padding);
         color: #303031;
     }
     .main-actions-wrap {
@@ -1611,7 +1615,7 @@
     .box-inner-wrap {
         display: flex;
         align-items: center;
-        padding: 12.8rem 0 12.8rem 0;
+        padding: var(--main-padding) 0 var(--main-padding) 0;
         justify-content: flex-end;
     }
     .box-reverse {
@@ -1644,7 +1648,7 @@
     }
 }
 .main-app-box {
-    padding: 6.4rem 0 12.8rem 0;
+    padding: var(--second-padding) 0 var(--main-padding) 0;
     background: linear-gradient(180deg, #F0F2F6 0%, #F8FAFF 96.8%);
     .box-inner-wrap {
         display: flex;
@@ -1662,7 +1666,7 @@
     }
     .text-inner-wrap {
         width: calc(50% - 14.5rem);
-        padding-left: 6.4rem;
+        padding-left: var(--second-padding);
         flex-shrink: 0;
         order: 3;
     }
@@ -1704,7 +1708,7 @@
         display: flex;
         align-items: center;
         padding-top: 10.6rem;
-        padding-bottom: 12.8rem;
+        padding-bottom: var(--main-padding);
     }
     .photo-inner-wrap {
         width: 30rem;
@@ -1748,7 +1752,7 @@
     }
 }
 .tiles-about-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     .items-wrap {
         margin: 0 -8px -16px -8px;
         &.items-main {
@@ -1781,7 +1785,7 @@
     }
 }
 .tiles-payments-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     background-color: #F0F2F6;
     .items-wrap {
         margin: 0 -1.6rem -3.2rem -1.6rem;
@@ -1798,7 +1802,7 @@
 }
 .tiles-cards-simple-box {
     background-color: #F0F2F6;
-    padding: 12.8rem 0 12.8rem 0;
+    padding: var(--main-padding) 0 var(--main-padding) 0;
     .items-wrap {
         margin: 0 -1.6rem -3.2rem -1.6rem;
     }
@@ -1818,7 +1822,7 @@
 }
 .tiles-cards-second-box {
     background-color: #F0F2F6;
-    padding: 12.8rem 0 12.8rem 0;
+    padding: var(--main-padding) 0 var(--main-padding) 0;
     .item-wrap {
         margin-bottom: 3.2rem;
         &:last-child {
@@ -1827,7 +1831,7 @@
     }
 }
 .tiles-cards-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     background-color: #F0F2F6;
     .items-wrap {
         margin: 0 -1.6rem -3.2rem -1.6rem;
@@ -1838,11 +1842,11 @@
         padding: 0 1.6rem;
     }
     .main-buttons-wrap {
-        margin-top: 6.4rem;
+        margin-top: var(--second-padding);
     }
 }
 .tiles-exchange-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     background-color: #F0F2F6;
     .item-wrap {
         margin-bottom: 3.2rem;
@@ -1852,7 +1856,7 @@
     }
 }
 .tiles-top-box {
-    padding: 12.8rem 0;
+    padding: var(--main-padding) 0;
     background-color: #F0F2F6;
     .items-outer-wrap {
         display: flex;
@@ -1888,11 +1892,12 @@
     }
 }
 .tiles-attentions-box {
-    padding-bottom: 12.8rem;
-    padding-top: 12.8rem;
+    padding-bottom: var(--main-padding);
+    padding-top: var(--main-padding);
     .items-wrap {
         margin: 0 -1.6rem -3.2rem -1.6rem;
     }
+    
     .item-wrap {
         padding: 0 1.6rem;
         margin-bottom: 3.2rem;
@@ -1919,7 +1924,7 @@
     }
 }
 .tiles-credits-box {
-    padding: 12.8rem 0 6.4rem 0;
+    padding: var(--main-padding) 0 var(--second-padding) 0;
     background: linear-gradient(178.32deg, #FFFFFF 2.76%, #F0F2F6 98.57%);
     .items-wrap {
         margin: 0 -8px;
@@ -1935,7 +1940,7 @@
     }
 }
 .main-title-wrap {
-    margin-bottom: 6.4rem;
+    margin-bottom: var(--second-padding);
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -2287,10 +2292,120 @@
     }
 }
 @media (max-width: 639px) {
+    .main-info-tiles-box .box-inner-wrap.mb-max:not(:last-child) {
+        margin-bottom: var(--main-padding);
+    }
+    .inner-head-box.pb-max,
+    .main-info-tiles-box.section-second,
+    .main-products-scheme-box,
+    .main-overview-tiles-box {
+        padding-bottom: var(--main-padding);
+    }
+    .main-video-box,
+    .tile-top-box,
+    .main-bg-light-box {
+        padding-top: var(--main-padding);
+    }
+    .main-overview-title-box,
+    .main-top-box .inner-wrap,
+    .main-card-head-box,
+    .main-payment-head-box,
+    .main-countries-box,
+    .inner-head-box,
+    .main-ld-tiles-box {
+        padding-top: var(--main-padding);
+        padding-bottom: var(--main-padding);
+    }
+    .inner-head-box {
+        .main-title-wrap {
+            &:first-child {
+                padding-top: 0;
+            }
+        }
+    }
+    .main-info-text-box {
+        padding-top: 96px;
+        padding-bottom: 96px;
+    }
+    .main-pitch-head-box {
+        .title-inner-wrap {
+            .h1-title {
+                font-size: 40px;
+                margin-bottom: 8px;
+            }
+        }
+    }
+    .main-products-info-box {
+        .text-inner-wrap {
+            .main-actions-qr-wrap {
+                margin: 0 -30px;
+                display: flex;
+                justify-content: center;
+                .action-button {
+                    width: auto;
+                    padding-left: 10px;
+                    padding-right: 10px;
+                    &:last-child {
+                        padding-left: 10px;
+                        padding-right: 10px;
+                    }
+                    &:first-child {
+                        padding-left: 10px;
+                        padding-right: 10px;
+                    }
+                }
+            }
+        }
+    }
+    .main-tiles-percent-box, .main-services-full-box, .main-tiles-text-box  {
+        .main-title-wrap {
+            margin-bottom: 32px;
+        }
+    }
+    .main-title-wrap {
+        &.text-body-large {
+            font-size: 20px;
+        }
+        .h1-title, .h1-title.title-large, .main-title {
+            margin-bottom: 8px;
+            font-size: 40px;
+        }
+        p, ul {
+            br {
+                display: none;
+            }
+        }
+    }
+    .main-overview-title-box {
+        .h2-title {
+            font-size: 32px;
+        }
+    }
+    .main-about-tiles-box {
+        .main-title-wrap {
+            .main-title {
+                font-size: 48px;
+                font-weight: bold;
+            }
+        }
+    }
+    .main-bg-box {
+        .main-about-tiles-box {
+            .box-inner-wrap {
+                margin-bottom: 76px;
+            }
+        }
+    }
+    /* --------------------- */
+    
+    
     .main-tables-box {
         .box-inner-wrap {
             padding-left: 20px;
             padding-right: 20px;
+            &:last-child {
+                margin-bottom: 0;
+            }
         }
         .table-inner-wrap {
             margin-left: -20px;
@@ -2586,8 +2701,6 @@
     .main-top-box {
         .inner-wrap {
             display: block;
-            padding-top: 50px;
-            padding-bottom: 50px;
         }
         .photo-inner-wrap {
             margin: 0 auto;
