--- a/css/less/structura.less
+++ b/css/less/structura.less
@@ -113,6 +113,8 @@ html {
 .header+.main-menu-box {
     border-top: none;
     margin-bottom: 0;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 .main-menu-box {
     position: relative;
@@ -124,13 +126,12 @@ html {
     color: var(--clr-title);
     line-height: 1;
     text-align: center;
-    padding: 15px 0;
+    padding: 24px 0;
     margin-bottom: 8.2rem;
     .main-title-wrap {
         text-align: center;
         color: #1D1D1F;
         font-weight: 500;
-        padding-top: 10px;
         margin-bottom: 24px;
         .h4-title {
             margin-bottom: 24px;
@@ -190,7 +191,7 @@ html {
     line-height: 1.2;
     color: var(--clr-title);
     background-color: #EAEAEA;
-    box-shadow: 0px -4px 9px rgba(0, 0, 0, 0.1);
+    //box-shadow: 0px -4px 9px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     padding: 7rem 0 24px 0;
     .inner-wrap {
@@ -588,10 +589,29 @@ html {
 }
 @media (max-width: 1023px) {
     .main-menu-box {
-        font-size: 12px;
+        //font-size: 12px;
+        margin-bottom: 0;
+        .inner-wrap {
+        }
         .menu {
+            justify-content: flex-start;
+            flex-wrap: nowrap;
+            width: auto;
+            min-width: inherit;
+            padding-left: var(--paddingContainer);
+            padding-right: var(--paddingContainer);
+            margin-left: calc(var(--paddingContainer) * -1);
+            margin-right: calc(var(--paddingContainer) * -1);
+            overflow-y: hidden;
+            overflow-x: auto;
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+            &::-webkit-scrollbar {
+                width: 0;
+                height: 0;
+            }
             li {
-                width: 100px;
+                //width: 100px;
             }
         }
     }
@@ -682,7 +702,7 @@ html {
     .main-menu-box {
         .menu {
             li {
-                width: 20%;
+                //width: 20%;
             }
         }
     }
@@ -711,7 +731,7 @@ html {
     .main-menu-box {
         .menu {
             li {
-                width: 25%;
+                //width: 25%;
             }
         }
     }
@@ -778,7 +798,7 @@ html {
     .main-menu-box {
         .menu {
             li {
-                width: 33.33%;
+                //width: 33.33%;
             }
         }
     }
