--- a/css/less/main.less
+++ b/css/less/main.less
@@ -199,6 +199,11 @@ table.tbl-main-info {
         margin-bottom: 0;
     }
     tr {
+        &:last-child {
+            th, td {
+                border-bottom: none;
+            }
+        }
         &:first-child {
             th, td {
                 padding-top: 0;
