--- a/css/less/structura.less
+++ b/css/less/structura.less
@@ -725,6 +725,15 @@ html {
                 }
             }
         }
+        .actions-outer-wrap {
+            .action-wrap {
+                &:last-child {
+                    &.action-qr {
+                        display: none;
+                    }
+                }
+            }
+        }
     }
 }
 @media (max-width: 639px) {
