--- a/css/less/items.less
+++ b/css/less/items.less
@@ -579,7 +579,7 @@
 .item-tile-pitch-second {
     .tile-title-wrap {
         min-height: 7rem;
-        margin-bottom: 2rem;
+        margin-bottom: 3.2rem;
     }
 }
 .item-tile-logos {
@@ -796,6 +796,20 @@
     font-weight: 500;
     color: var(--clr-title);
     height: 100%;
+    .tile-logo-text {
+        width: 96px;
+        height: 96px;
+        border: 1px solid #C9CBCE;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        font-size: 32px;
+        font-weight: bold;
+        color: #FB435B;
+        margin: 0 0 16px 0;
+    }
 }
 .item-tile-prt-four {
     display: flex;
@@ -912,7 +926,7 @@
             position: absolute;
             top: 0;
             bottom: 0;
-            left: 0;
+            left: -3px;
             right: 0;
             background: rgba(0, 0, 0, 0.24);
             border: 3px solid #FFFFFF;
@@ -993,7 +1007,7 @@
         display: block;
         position: absolute;
         top: 0;
-        bottom: 0;
+        bottom: 4rem;
         left: 0;
         right: 0;
         margin: auto;
@@ -1033,9 +1047,13 @@
         margin-top: 0;
     }
     .tile-ico {
-        width: 54px;
+        width: 72px;
         height: 72px;
         margin: 0 0 3.2rem 0;
+        img {
+            left: 0;
+            margin-left: 0;
+        }
     }
 }
 .item-tile-integration {
@@ -1072,6 +1090,8 @@
     }
     .tile-logo-title {
         display: block;
+        margin-left: auto;
+        margin-right: auto;
         margin-bottom: 20px;
         &:last-child {
             margin-bottom: 0;
@@ -1080,6 +1100,7 @@
     .tile-title {
         margin: 0;
         background-image: linear-gradient(90deg, #0029FF 0%, #ED7DCE 100%);
+        min-height: 3.6em;
     }
     .title-att, .text-att {
         color: #FB435B;
@@ -2847,6 +2868,19 @@
     }
 }
 @media (max-width: 767px) {
+    .item-tile-integration {
+        .tile-logo-wrap {
+            padding-bottom: 16px;
+            border-bottom: 1px solid #C9CBCE;
+        }
+        .tile-title-wrap {
+            padding-bottom: 16px;
+            border-bottom: 1px solid #C9CBCE;
+        }
+        .tile-title {
+            min-height: 0;
+        }
+    }
     .item-tile-pitch-full {
         padding-left: 4.8rem;
         padding-right: 4.8rem;
@@ -3030,6 +3064,7 @@
     .item-tile-inner-text {
         padding: 32px 24px 48px 24px;
     }
+    .item-tile-crypto,
     .item-tile-overview-second,
     .item-tile-about-third.tile-smallest,
     .item-tile-about-four {
@@ -3114,6 +3149,24 @@
             }
         }
     }
+    /* ------ */
+
+    .item-tile-logo-text {
+        min-height: 420px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .tile-photo-wrap, .tile-text-wrap {
+            flex: inherit;
+            flex-shrink: 0;
+            padding: 0;
+            margin: 0;
+        }
+        .tile-text-wrap {
+            padding-top: 20px;
+        }
+    }
+    /* ------ */
 }
 @media (min-width: 768px) {
     .item-tile-percent.tile-full {
@@ -3175,6 +3228,14 @@
                     padding-top: 32px;
                 }
             }
+        }
+    }
+}
+@media (min-width: 1024px) and (max-width: 1199px) {
+    .item-tile-info-text {
+        .h6-title {
+            margin-left: 0;
+            margin-right: -30px;
         }
     }
 }
